Address review feedback for agent auto-configuration